--- a/index.html
+++ b/index.html
@@ -1,1 +1,227 @@
 <!doctype html>
+
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="stylesheet.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--[if lt IE 9]><script src=”http://html5shim.googlecode.com/svn/trunk/html5.js”></script><![end if]-->
+        <title>Good Eats - Street Tacos</title>
+    </head>
+    <body>
+        <h1>Good Eats - Street Tacos</h1>
+        <h2>Street Tacos</h2>
+
+        <nav>
+            <ul>
+                <li><a href="#">Save</a></li> <!-- (save svg) -->
+                <li><a href="#">Share</a></li> <!-- (share svg) -->
+                <li><a href="#">Print</a></li> <!-- (print svg) -->
+                <li><a href="#">Jump to Recipe</a></li> <!-- (jump svg) -->
+            </ul>
+        </nav>
+
+        <img src="images/street-tacos.png" alt="Picture of a delicious looking taco.">
+        <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
+        <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
+
+        <h3>Details</h3>
+        <dl>
+            <dt>Prep Time:</dt>
+            <dd>10 minutes</dd>
+            <dt>Cook Time:</dt>
+            <dd>10 minutes</dd>
+            <dt>Total Time:</dt>
+            <dd>20 minutes</dd>
+            <dt>Author:</dt>
+            <dd>Taco Cheesington</dd>
+            <dt>Servings:</dt>
+            <dd>6 Tacos</dd>
+        </dl>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Flank steak</li>
+            <li>Soy Sauce</li>
+            <li>Worcestershire sauce</li>
+            <li>Lime</li>
+            <li>MInced garlic</li>
+            <li>Cilantro</li>
+            <li>Chili powder</li>
+            <li>Cumin</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Corn tortillas</li>
+        </ul>
+
+        <h3>Directions:</h3>
+        <ol>
+            <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
+            <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
+            <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
+            <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+        </ol>
+
+        <aside>
+            <h2>Need some side dishes?</h2>
+
+            <section>
+                <h3>Mexican Rice</h3>
+                <img src="images/mexican-rice.png" alt-="An image of a side dish of mexican rice.">
+                <p>Traditional recipe witha twist.</p>
+                <input type="radio" id="rating1" name="rating1" value="1" checked> <!-- 4 out of 5 star rating using radio buttons I think -->
+                <input type="radio" id="rating2" name="rating2" value="2" checked>
+                <input type="radio" id="rating3" name="rating3" value="3" checked>
+                <input type="radio" id="rating4" name="rating4" value="4" checked>
+                <input type="radio" id="rating5" name="rating5" value="5">
+            </section>
+
+            <section>
+                <h3>Salsa</h3>
+                <img src="images/salsa.png" alt="Image of some salsa.">
+                <p>Just the right amount of spice.</p>
+                <input type="radio" id="rating1" name="rating1" value="1" checked> <!-- 5 out of 5 star rating -->
+                <input type="radio" id="rating2" name="rating2" value="2" checked>
+                <input type="radio" id="rating3" name="rating3" value="3" checked>
+                <input type="radio" id="rating4" name="rating4" value="4" checked>
+                <input type="radio" id="rating5" name="rating5" value="5" checked>
+            </section>
+
+            <section>
+                <h3>Guacamole</h3>
+                <img src="images/guacamole.png" alt="Image of some guacamole dip.">
+                <p>Fresh and healthy.</p>
+                <input type="radio" id="rating1" name="rating1" value="1" checked> <!-- 5 out of 5 star rating -->
+                <input type="radio" id="rating2" name="rating2" value="2" checked>
+                <input type="radio" id="rating3" name="rating3" value="3" checked>
+                <input type="radio" id="rating4" name="rating4" value="4" checked>
+                <input type="radio" id="rating5" name="rating5" value="5">
+            </section>
+
+            <section>
+                <h3>Tortillas</h3>
+                <img src="images/tortillas.png" alt="Image of some homemade tortillas.">
+                <p>Easy to make and so good.</p>
+                <input type="radio" id="rating1" name="rating1" value="1" checked> <!-- 5 out of 5 star rating -->
+                <input type="radio" id="rating2" name="rating2" value="2" checked>
+                <input type="radio" id="rating3" name="rating3" value="3" checked>
+                <input type="radio" id="rating4" name="rating4" value="4" checked>
+                <input type="radio" id="rating5" name="rating5" value="5">
+            </section>
+        </aside>
+    </body>
+
+    <header>
+        <nav>
+            <h3>Main Navigation</h3> <!-- (hamburger svg) -->
+            <ul>
+                <li>
+                    <a href="#">Home
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M4 3h8l-1 9h-6z" />
+                            <path d="M7 18h2v3h-2z" />
+                            <path d="M20 3v12h-5c-.023 -3.681 .184 -7.406 5 -12z" />
+                            <path d="M20 15v6h-1v-3" />
+                            <line x1="8" y1="12" x2="8" y2="18" />
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Breakfast</a>
+                    <img src="images/breakfast.png" alt="Simple image of a breakfast icon.">
+                </li>
+                <li>
+                    <a href="#">Brunch</a>
+                    <img src="images/brunch.png" alt="Simple image of a brunch icon.">
+                </li>
+                <li>
+                    <a href="#">Lunch</a>
+                    <img src="images/lunch.png" alt="Simple image of a lunch icon.">
+                </li>
+                <li>
+                    <a href="#">Dinner</a>
+                    <img src="images/dinner.png" alt="Simple image of a dinner icon.">
+                </li>
+                <li>
+                    <a href="#">Appetizers</a>
+                    <img src="images/appetizers.png" alt="Simple image of an appetizer icon.">
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
+                    <img src="images/desserts.png" alt="Simple image of a dessert icon.">
+                </li>
+                <li>
+                    <a href="#">Beverages</a>
+                    <img src="images/beverages.png" alt="Simple image of a beverage icon.">
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <circle cx="12" cy="12" r="9" />
+                        <circle cx="12" cy="10" r="3" />
+                        <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
+                    </svg>
+                </li>
+            </ul>
+        </nav>
+
+        <section>
+            <input type="text" id="search" name="search">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <circle cx="10" cy="10" r="7" />
+                <line x1="21" y1="21" x2="15" y2="15" />
+            </svg>
+        </section>
+    </header>
+
+    <footer>
+        <h3>Connect</h3>
+            <h4>Social Media Links</h4>
+            <ul>
+                <li>
+                    <a href="https://facebook.com">Facebook</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                    </svg>
+                </li>
+                <li>
+                    <a href="https://instagram.com">Instagram</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <rect x="4" y="4" width="16" height="16" rx="4" />
+                        <circle cx="12" cy="12" r="3" />
+                        <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                    </svg>
+                </li>
+                <li>
+                    <a href="https://youtube.com">YouTube</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <rect x="3" y="5" width="18" height="14" rx="4" />
+                        <path d="M10 9l5 3l-5 3z" />
+                    </svg>
+                </li>
+                <li>
+                    <a href="https://tiktok.com">Tik Tok</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
+                    </svg>
+                </li>
+            </ul>
+
+        <h3>Good Eats</h3>
+        <small>Copyright 2022<br>Taco Cheesington</small>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M4 3h8l-1 9h-6z" />
+            <path d="M7 18h2v3h-2z" />
+            <path d="M20 3v12h-5c-.023 -3.681 .184 -7.406 5 -12z" />
+            <path d="M20 15v6h-1v-3" />
+            <line x1="8" y1="12" x2="8" y2="18" />
+          </svg>
+    </footer>
+</html>
