--- a/index.html
+++ b/index.html
@@ -225,43 +225,44 @@
 
         <footer>
             <h3>Connect</h3>
-                <h4>Social Media Links</h4>
+                <!-- Social Media Links -->
                 <ul id="social">
                     <li>
-                        <a href="https://facebook.com">Facebook</a>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                         </svg>
+                        <a href="https://facebook.com">Facebook</a>
                     </li>
                     <li>
-                        <a href="https://instagram.com">Instagram</a>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <rect x="4" y="4" width="16" height="16" rx="4" />
                             <circle cx="12" cy="12" r="3" />
                             <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
                         </svg>
+                        <a href="https://instagram.com">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://youtube.com">YouTube</a>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <rect x="3" y="5" width="18" height="14" rx="4" />
                             <path d="M10 9l5 3l-5 3z" />
                         </svg>
+                        <a href="https://youtube.com">YouTube</a>
                     </li>
                     <li>
-                        <a href="https://tiktok.com">Tik Tok</a>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
                         </svg>
+                        <a href="https://tiktok.com">Tik Tok</a>
                     </li>
                 </ul>
 
-                <h4>Good Eats</h4>
+                <!-- Good Eats -->
                 <small>Copyright 2022<br>Taco Cheesington</small>
+
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M4 3h8l-1 9h-6z" />
