--- a/index.html
+++ b/index.html
@@ -108,44 +108,52 @@
                 <h3>Mexican Rice</h3>
                 <img src="images/mexican-rice.png" alt-="An image of a side dish of mexican rice.">
                 <figcaption>Traditional recipe with a twist.</figcaption>
-                <input type="radio" id="rating1" name="rating1"> <!-- 4 out of 5 star rating using radio buttons I think -->
-                <input type="radio" id="rating2" name="rating2">
-                <input type="radio" id="rating3" name="rating3">
-                <input type="radio" id="rating4" name="rating4">
-                <input type="radio" id="rating5" name="rating5" checked>
+                <span class="star-rating">
+                    <input type="radio" name="rating" value="1"> <!-- 4 out of 5 star rating using radio buttons I think -->
+                    <input type="radio" name="rating" value="2">
+                    <input type="radio" name="rating" value="3">
+                    <input type="radio" name="rating" value="4">
+                    <input type="radio" name="rating" value="5">
+                </span>
             </figure>
 
             <figure>
                 <h3>Salsa</h3>
                 <img src="images/salsa.png" alt="Image of some salsa.">
                 <figcaption>Just the right amount of spice.</figcaption>
-                <input type="radio" id="rating1" name="rating1" checked> <!-- 5 out of 5 star rating -->
-                <input type="radio" id="rating2" name="rating2" checked>
-                <input type="radio" id="rating3" name="rating3" checked>
-                <input type="radio" id="rating4" name="rating4" checked>
-                <input type="radio" id="rating5" name="rating5" checked>
+                <span class="star-rating">
+                    <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
+                    <input type="radio" name="rating" value="2">
+                    <input type="radio" name="rating" value="3">
+                    <input type="radio" name="rating" value="4">
+                    <input type="radio" name="rating" value="5">
+                </span>
             </figure>
 
             <figure>
                 <h3>Guacamole</h3>
                 <img src="images/guacamole.png" alt="Image of some guacamole dip.">
                 <figcaption>Fresh and healthy.</figcaption>
-                <input type="radio" id="rating1" name="rating1" checked> <!-- 5 out of 5 star rating -->
-                <input type="radio" id="rating2" name="rating2" checked>
-                <input type="radio" id="rating3" name="rating3" checked>
-                <input type="radio" id="rating4" name="rating4" checked>
-                <input type="radio" id="rating5" name="rating5">
+                <span class="star-rating">
+                    <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
+                    <input type="radio" name="rating" value="2">
+                    <input type="radio" name="rating" value="3">
+                    <input type="radio" name="rating" value="4">
+                    <input type="radio" name="rating" value="5">
+                </span>
             </figure>
 
             <figure>
                 <h3>Tortillas</h3>
                 <img src="images/tortillas.png" alt="Image of some homemade tortillas.">
                 <figcaption>Easy to make and so good.</figcaption>
-                <input type="radio" id="rating1" name="rating1" checked> <!-- 5 out of 5 star rating -->
-                <input type="radio" id="rating2" name="rating2" checked>
-                <input type="radio" id="rating3" name="rating3" checked>
-                <input type="radio" id="rating4" name="rating4" checked>
-                <input type="radio" id="rating5" name="rating5">
+                <span class="star-rating">
+                    <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
+                    <input type="radio" name="rating" value="2">
+                    <input type="radio" name="rating" value="3">
+                    <input type="radio" name="rating" value="4">
+                    <input type="radio" name="rating" value="5">
+                </span>
             </figure>
         </aside>
 
@@ -261,6 +269,7 @@
                 </ul>
 
                 <!-- Good Eats -->
+                <img src="images/taco-cheesington.png" alt="Taco Cheesington sprinkling cheese on a street taco."
                 <small>Copyright 2022<br>Taco Cheesington</small>
 
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
