trying to get the side dishes area to format correctly

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <h3>Mexican Rice</h3>
                 <img src="images/mexican-rice.png" alt-="An image of a side dish of mexican rice.">
                 <figcaption>Traditional recipe with a twist.</figcaption>
+                <p>Rating</p>
                 <span class="star-rating">
                     <input type="radio" name="rating" value="1"> <!-- 4 out of 5 star rating using radio buttons I think -->
                     <input type="radio" name="rating" value="2">
@@ -121,6 +122,7 @@
                 <h3>Salsa</h3>
                 <img src="images/salsa.png" alt="Image of some salsa.">
                 <figcaption>Just the right amount of spice.</figcaption>
+                <p>Rating</p>
                 <span class="star-rating">
                     <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
                     <input type="radio" name="rating" value="2">
@@ -134,6 +136,7 @@
                 <h3>Guacamole</h3>
                 <img src="images/guacamole.png" alt="Image of some guacamole dip.">
                 <figcaption>Fresh and healthy.</figcaption>
+                <p>Rating</p>
                 <span class="star-rating">
                     <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
                     <input type="radio" name="rating" value="2">
@@ -147,6 +150,7 @@
                 <h3>Tortillas</h3>
                 <img src="images/tortillas.png" alt="Image of some homemade tortillas.">
                 <figcaption>Easy to make and so good.</figcaption>
+                <p>Rating</p>
                 <span class="star-rating">
                     <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
                     <input type="radio" name="rating" value="2">
