fixed home option for the main navigation to include only the svg and have that be clickable

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
             <menu>
                 <li id="home-icon">
+                    <a href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M4 3h8l-1 9h-6z" />
@@ -184,7 +185,7 @@
                         <path d="M20 15v6h-1v-3" />
                         <line x1="8" y1="12" x2="8" y2="18" />
                     </svg> <!-- home and logo svg -->
-                    <a href="#">Home</a>
+                    </a>
                 </li>
                 <li>
                     <img src="images/breakfast.png" alt="Simple image of a breakfast icon.">
