adjusted hover effect for figure and adjusted size of figure images

--- a/index.html
+++ b/index.html
@@ -109,12 +109,17 @@
                 <img src="images/mexican-rice.png" alt-="An image of a side dish of mexican rice.">
                 <figcaption>Traditional recipe with a twist.</figcaption>
                 <p>Rating</p>
-                <span class="star-rating">
-                    <input type="radio" name="rating" value="1"> <!-- 4 out of 5 star rating using radio buttons I think -->
-                    <input type="radio" name="rating" value="2">
-                    <input type="radio" name="rating" value="3">
-                    <input type="radio" name="rating" value="4">
-                    <input type="radio" name="rating" value="5">
+                <span class="rating">
+                    <input type="radio" id="1star" name="1star" value="1" checked> <!-- 4 out of 5 star rating using radio buttons I think -->
+                        <label class="full" for="1star"></label>
+                    <input type="radio" id="2stars" name="2stars" value="2" checked>
+                        <label class="full" for="2stars"></label>
+                    <input type="radio" id="3stars" name="3stars" value="3" checked>
+                        <label class="full" for="3stars"></label>
+                    <input type="radio" id="4stars" name="4stars" value="4" checked>
+                        <label class="full" for="4stars"></label>
+                    <input type="radio" id="5stars" name="5stars" value="5">
+                        <label class="full" for="5stars"></label>
                 </span>
             </figure>
 
@@ -123,12 +128,17 @@
                 <img src="images/salsa.png" alt="Image of some salsa.">
                 <figcaption>Just the right amount of spice.</figcaption>
                 <p>Rating</p>
-                <span class="star-rating">
-                    <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
-                    <input type="radio" name="rating" value="2">
-                    <input type="radio" name="rating" value="3">
-                    <input type="radio" name="rating" value="4">
-                    <input type="radio" name="rating" value="5">
+                <span class="rating">
+                    <input type="radio" id="1star-2" name="1star-2" value="1" checked> <!-- 5 out of 5 star rating -->
+                        <label class="full" for="1star-2"></label>
+                    <input type="radio" id="2stars-2" name="2stars-2" value="2" checked>
+                        <label class="full" for="2stars-2"></label>
+                    <input type="radio" id="3stars-2" name="3stars-2" value="3" checked>
+                        <label class="full" for="3stars-2"></label>
+                    <input type="radio" id="4stars-2" name="4stars-2" value="4" checked>
+                        <label class="full" for="4stars-2"></label>
+                    <input type="radio" id="5stars-2" name="5stars-2" value="5" checked>
+                        <label class="full" for="1star-2"></label>
                 </span>
             </figure>
 
@@ -137,12 +147,17 @@
                 <img src="images/guacamole.png" alt="Image of some guacamole dip.">
                 <figcaption>Fresh and healthy.</figcaption>
                 <p>Rating</p>
-                <span class="star-rating">
-                    <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
-                    <input type="radio" name="rating" value="2">
-                    <input type="radio" name="rating" value="3">
-                    <input type="radio" name="rating" value="4">
-                    <input type="radio" name="rating" value="5">
+                <span class="rating">
+                    <input type="radio" id="1star-3" name="1star-3" value="1" checked> <!-- 4 out of 5 star rating -->
+                        <label class="full" for="1star-3"></label>
+                    <input type="radio" id="2stars-3" name="2stars-3" value="2" checked>
+                        <label class="full" for="2stars-3"></label>
+                    <input type="radio" id="3stars-3" name="3stars-3" value="3" checked>
+                        <label class="full" for="3stars-3"></label>
+                    <input type="radio" id="4stars-3" name="4stars-3" value="4" checked>
+                        <label class="full" for="4stars-3"></label>
+                    <input type="radio" id="5stars-3" name="5stars-3" value="5">
+                        <label class="full" for="5stars-3"></label>
                 </span>
             </figure>
 
@@ -151,12 +166,17 @@
                 <img src="images/tortillas.png" alt="Image of some homemade tortillas.">
                 <figcaption>Easy to make and so good.</figcaption>
                 <p>Rating</p>
-                <span class="star-rating">
-                    <input type="radio" name="rating" value="1"> <!-- 5 out of 5 star rating -->
-                    <input type="radio" name="rating" value="2">
-                    <input type="radio" name="rating" value="3">
-                    <input type="radio" name="rating" value="4">
-                    <input type="radio" name="rating" value="5">
+                <span class="rating">
+                    <input type="radio" id="1star-4" name="1star-4" value="1" checked> <!-- 4 out of 5 star rating -->
+                        <label class="full" for="1star-4"></label>
+                    <input type="radio" id="2stars-4" name="2stars-4" value="2" checked>
+                        <label class="full" for="2stars-4"></label>
+                    <input type="radio" id="3stars-4" name="3stars-4" value="3" checked>
+                        <label class="full" for="3stars-4"></label>
+                    <input type="radio" id="4stars-4" name="4stars-4" value="4" checked>
+                        <label class="full" for="4stars-4"></label>
+                    <input type="radio" id="5stars-4" name="5stars-4" value="5">
+                        <label class="full" for="5stars-4"></label>
                 </span>
             </figure>
         </aside>
