--- a/index.html
+++ b/index.html
@@ -208,41 +208,49 @@
                     </a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/breakfast.png" alt="Simple image of a breakfast icon.">
-                    <a href="#">Breakfast</a>
+                    Breakfast</a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/brunch.png" alt="Simple image of a brunch icon.">
-                    <a href="#">Brunch</a>
+                    Brunch</a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/lunch.png" alt="Simple image of a lunch icon.">
-                    <a href="#">Lunch</a>
+                    Lunch</a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/dinner.png" alt="Simple image of a dinner icon.">
-                    <a href="#">Dinner</a>
+                    Dinner</a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/appetizers.png" alt="Simple image of an appetizer icon.">
-                    <a href="#">Appetizers</a>
+                    Appetizers</a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/desserts.png" alt="Simple image of a dessert icon.">
-                    <a href="#">Desserts</a>
+                    Desserts</a>
                 </li>
                 <li>
+                    <a href="#">
                     <img src="images/beverages.png" alt="Simple image of a beverage icon.">
-                    <a href="#">Beverages</a>
+                    Beverages</a>
                 </li>
                 <li id="last">
+                    <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <circle cx="12" cy="12" r="9" />
                         <circle cx="12" cy="10" r="3" />
                         <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
                     </svg>
-                    <a href="#">Sign In/Up</a>
+                    Sign In/Up</a>
                 </li>
             </menu>
         </header>
