adjusted some small things with the footer

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         </section>
 
         <footer>
-            <h3>Connect</h3>
+            <!-- Connect -->
                 <!-- Social Media Links -->
                 <ul id="social">
                     <li>
