--- a/index.html
+++ b/index.html
@@ -60,46 +60,70 @@
             </nav>
         </section>
 
-        <img src="images/street-tacos.png" alt="Picture of a delicious looking street taco.">
-        <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
-        <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
+        <div class="image-container">
+            <div class="body-image">
+                <img src="images/street-tacos.png" alt="Picture of a delicious looking street taco.">
+            </div>
+            <div class="body-image-text">
+                <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
+                <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!</p>
+            </div>
+        </div>
 
-        <h3>Details</h3>
-        <dl>
-            <dt>Prep Time</dt>
-            <dd>10 minutes</dd>
-            <dt>Cook Time</dt>
-            <dd>10 minutes</dd>
-            <dt>Total Time</dt>
-            <dd>20 minutes</dd>
-            <dt>Author</dt>
-            <dd>Taco Cheesington</dd>
-            <dt>Servings</dt>
-            <dd>6 Tacos</dd>
-        </dl>
+        <div class="details">
+            <h3>Details</h3>
+            <dl>
+                <div>
+                    <dt>Prep Time</dt>
+                    <dd>10 minutes</dd>
+                </div>
+                <div>
+                    <dt>Cook Time</dt>
+                    <dd>10 minutes</dd>
+                </div>
+                <div>
+                    <dt>Total Time</dt>
+                    <dd>20 minutes</dd>
+                </div>
+                <div>
+                    <dt>Author</dt>
+                    <dd>Taco Cheesington</dd>
+                </div>
+                <div>
+                    <dt>Servings</dt>
+                    <dd>6 Tacos</dd>
+                </div>
+            </dl>
+        </div>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li>Flank steak</li>
-            <li>Soy Sauce</li>
-            <li>Worcestershire sauce</li>
-            <li>Lime</li>
-            <li>Minced garlic</li>
-            <li>Cilantro</li>
-            <li>Chili powder</li>
-            <li>Cumin</li>
-            <li>Salt</li>
-            <li>Pepper</li>
-            <li>Corn tortillas</li>
-        </ul>
+        <div class="container">
+            <div class="ingredients">
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>Flank steak</li>
+                    <li>Soy Sauce</li>
+                    <li>Worcestershire sauce</li>
+                    <li>Lime</li>
+                    <li>Minced garlic</li>
+                    <li>Cilantro</li>
+                    <li>Chili powder</li>
+                    <li>Cumin</li>
+                    <li>Salt</li>
+                    <li>Pepper</li>
+                    <li>Corn tortillas</li>
+                </ul>
+            </div>
 
-        <h3>Directions:</h3>
-        <ol>
-            <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
-            <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
-            <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
-            <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
-        </ol>
+            <div class="directions">
+                <h3>Directions:</h3>
+                <ol>
+                    <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
+                    <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
+                    <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
+                    <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+                </ol>
+            </div>
+        </div>
 
         <aside>
             <h2>Need some side dishes?</h2>
@@ -346,7 +370,7 @@
                 </ul>
 
                 <!-- Good Eats -->
-                <img src="images/taco-cheesington.png" alt="Taco Cheesington sprinkling cheese on a street taco."
+                <img src="images/taco-cheesington.png" alt="Taco Cheesington sprinkling cheese on a street taco.">
                 <small>Copyright 2022<br>Taco Cheesington</small>
 
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
