adjusted some error messages that the html checker was giving me

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <figure>
                 <h3>Mexican Rice</h3>
-                <img src="images/mexican-rice.png" alt-="An image of a side dish of mexican rice.">
+                <img src="images/mexican-rice.png" alt="An image of a side dish of mexican rice.">
                 <figcaption>Traditional recipe with a twist.</figcaption>
                 <p>Rating</p>
                 <!-- Star Rating 1 -->
@@ -323,14 +323,14 @@
             </span>
         </header>
 
-        <section id="search">
-            <label for="search" id="search" name="search"><input type="text" for="search" placeholder="Find a recipe"></label>
+        <div id="searchBar">
+            <label for="search"><input type="text"  id="search" placeholder="Find a recipe"></label>
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <circle cx="10" cy="10" r="7" />
                 <line x1="21" y1="21" x2="15" y2="15" />
             </svg>
-        </section>
+        </div>
 
         <footer>
             <!-- Connect -->
